fixes invite spacing in low media resolution widths on inviteSomeone page; swaps out manage bills image for the previous graph image Deacon suggested

--- a/src/components/Dashboard/Dashboard-styles.css
+++ b/src/components/Dashboard/Dashboard-styles.css
@@ -189,9 +189,15 @@ button.update-bill-button:hover{
 }
 
 .manage-bills-div{
-  padding: 5px 7px;
-  background-color: white;
+  height: 50px;
+  width: 40px;
+  padding: 15px 7px 0px 7px;
 }
+
+.manage-bills-div:hover{
+  cursor: pointer;
+}
+
 img.manage-bills-button{
   width: 100px;
   height: 60px;
